--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -252,7 +252,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
+          <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow">
             <div class="team-item">
               <div class="team-image"><img src="assets/images/team-1.jpg" alt="Member Photo"/>
                 <div class="team-detail">
@@ -267,7 +267,7 @@
               </div>
             </div>
           </div>
-          <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
+          <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow">
             <div class="team-item">
               <div class="team-image"><img src="assets/images/team-2.jpg" alt="Member Photo"/>
                 <div class="team-detail">
@@ -282,7 +282,7 @@
               </div>
             </div>
           </div>
-          <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
+          <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow">
             <div class="team-item">
               <div class="team-image"><img src="assets/images/team-3.jpg" alt="Member Photo"/>
                 <div class="team-detail">
@@ -297,7 +297,7 @@
               </div>
             </div>
           </div>
-          <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow fadeInUp">
+          <div class="mb-sm-20 wow fadeInUp col-sm-6 col-md-3" onclick="wow">
             <div class="team-item">
               <div class="team-image"><img src="assets/images/team-4.jpg" alt="Member Photo"/>
                 <div class="team-detail">
