delete background presentation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -120,13 +120,14 @@
         </div>
       </div>
     </section>
-    <section class="module bg-dark-60" data-background="assets/images/section-6.jpg">
+    <!-- <section class="module bg-dark-60" data-background="assets/images/section-6.jpg"> -->
+      <section class="module bg-dark-60">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="video-box">
               <div class="video-box-icon">
-                <a class="video-pop-up" href="https://www.youtube.com/watch?v=hZmoMyFXDoI">
+                <a class="video-pop-up" href="https://www.youtube.com/watch?v=8YiQSvQzwgU">
                   <span class="icon-video"></span>
                 </a>
               </div>
