--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,24 +11,24 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">C@NET</a>
+        <a class="navbar-brand" href="#totop">C@NET</a>
       </div>
       <div class="collapse navbar-collapse" id="custom-collapse">
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a href="#">Home</a>
+            <a href="#totop">Home</a>
           </li>
           <li>
-            <a href="#About">About</a>
+            <a href="#About" class="section-scroll">About</a>
           </li>
           <li>
-            <a href="#Service">Service</a>
+            <a href="#Service" class="section-scroll">Service</a>
           </li>
           <li>
-            <a href="#Portfolio">Portfolio</a>
+            <a href="#Portfolio" class="section-scroll">Portfolio</a>
           </li>
           <li>
-            <a href="#Contact">Contact</a>
+            <a href="#Contact" class="section-scroll">Contact</a>
           </li>
         </ul>
       </div>
