--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,35 +55,32 @@
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <h2 class="module-title font-alt">About</h2>
-            <div class="module-subtitle font-serif">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
-              with my whole heart.</div>
+            <div class="module-subtitle font-serif">
+              Cyber ​​Advance System and Network Co., Ltd. was founded on February 27, 2009, with the goal to serve the increasing demand
+              of IT problems. Especially in the financial services and telecommunication sectors of business. Since then
+              the company has expanded its services to other operators and other markets.
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6 col-md-3 col-lg-3">
             <div class="alt-features-item">
               <div class="alt-features-icon">
-                <span class="icon-strategy"></span>
+                <span class="icon-refresh"></span>
               </div>
-              <h3 class="alt-features-title font-alt">Branding</h3>A wonderful serenity has taken possession of my entire soul like these sweet mornings.
+              <h3 class="alt-features-title font-alt">PRODUCT LIFECYCLE</h3>Mobile apps are like babies - they take a lot to bring into the world. Then they need a lot of support to stay alive. We're proud, diligent app parents. Our product management team even cares and supports your product well after sales.
             </div>
             <div class="alt-features-item">
               <div class="alt-features-icon">
                 <span class="icon-tools-2"></span>
               </div>
-              <h3 class="alt-features-title font-alt">Development</h3>A wonderful serenity has taken possession of my entire soul like these sweet mornings.
+              <h3 class="alt-features-title font-alt">Development</h3>Do you need a custom, native iOS, Android or Windows app? Prefer a cross-platform responsive web app? Require a secure backend? If you want it, we can build it. Where others struggle, we thrive.
             </div>
             <div class="alt-features-item">
               <div class="alt-features-icon">
                 <span class="icon-target"></span>
               </div>
-              <h3 class="alt-features-title font-alt">Marketing</h3>A wonderful serenity has taken possession of my entire soul like these sweet mornings.
-            </div>
-            <div class="alt-features-item">
-              <div class="alt-features-icon">
-                <span class="icon-tools"></span>
-              </div>
-              <h3 class="alt-features-title font-alt">Design</h3>A wonderful serenity has taken possession of my entire soul like these sweet mornings.
+              <h3 class="alt-features-title font-alt">Marketing</h3>From brand messaging and initial launch planning, to user acquisition, PR, app store optimization, enterprise adoption and more, mobile application marketing can help you stand out.
             </div>
           </div>
           <div class="col-md-6 col-lg-6 hidden-xs hidden-sm">
@@ -94,27 +91,21 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
             <div class="alt-features-item">
               <div class="alt-features-icon">
-                <span class="icon-camera"></span>
+                <span class="icon-tools"></span>
               </div>
-              <h3 class="alt-features-title font-alt">Photography</h3>A wonderful serenity has taken possession of my entire soul like these sweet mornings.
+              <h3 class="alt-features-title font-alt">DESIGN</h3>Design thinking is in our DNA. We hone the tiniest user interaction details, craft addicting and engaging experiences, and push pixels to boldly go where they've never gone before.
             </div>
             <div class="alt-features-item">
               <div class="alt-features-icon">
                 <span class="icon-mobile"></span>
               </div>
-              <h3 class="alt-features-title font-alt">Mobile</h3>A wonderful serenity has taken possession of my entire soul like these sweet mornings.
+              <h3 class="alt-features-title font-alt">MOBILE STRATEGY</h3>Need big ideas for your small screen? Our consultative approach will stretch you to explore creative solutions, then reign you in to meet business needs.
             </div>
             <div class="alt-features-item">
               <div class="alt-features-icon">
                 <span class="icon-linegraph"></span>
               </div>
-              <h3 class="alt-features-title font-alt">Music</h3>A wonderful serenity has taken possession of my entire soul like these sweet mornings.
-            </div>
-            <div class="alt-features-item">
-              <div class="alt-features-icon">
-                <span class="icon-basket"></span>
-              </div>
-              <h3 class="alt-features-title font-alt">Shop</h3>A wonderful serenity has taken possession of my entire soul like these sweet mornings.
+              <h3 class="alt-features-title font-alt">ANALYTICS</h3>Data matters. But do you have the right numbers to crunch, and will you run the right tests? Our mobile app analytics services help steer your product development in the right direction.
             </div>
           </div>
         </div>
