--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,7 +55,7 @@
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <h2 class="module-title font-alt">About</h2>
-            <div class="module-subtitle font-serif">
+            <div class="module-subtitle">
               Cyber ​​Advance System and Network Co., Ltd. was founded on February 27, 2009, with the goal to serve the increasing demand
               of IT problems. Especially in the financial services and telecommunication sectors of business. Since then
               the company has expanded its services to other operators and other markets.
@@ -134,7 +134,7 @@
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <h2 class="module-title font-alt">Services</h2>
-            <div class="module-subtitle font-serif">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
+            <div class="module-subtitle">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
               with my whole heart.</div>
           </div>
         </div>
@@ -219,7 +219,7 @@
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <h2 class="module-title font-alt">Portfolio</h2>
-            <div class="module-subtitle font-serif"></div>
+            <div class="module-subtitle"></div>
           </div>
         </div>
       </div>
@@ -338,7 +338,7 @@
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <h2 class="module-title font-alt">Meet Our Team</h2>
-            <div class="module-subtitle font-serif">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
+            <div class="module-subtitle">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
               with my whole heart.</div>
           </div>
         </div>
@@ -555,7 +555,7 @@
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <h2 class="module-title font-alt">Latest blog posts</h2>
-            <div class="module-subtitle font-serif">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
+            <div class="module-subtitle">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
               with my whole heart.</div>
           </div>
         </div>
@@ -666,7 +666,7 @@
         <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <h2 class="module-title font-alt">Contact</h2>
-            <div class="module-subtitle font-serif"></div>
+            <div class="module-subtitle"></div>
           </div>
         </div>
         <div>
