--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,7 +85,7 @@
           </div>
           <div class="col-md-6 col-lg-6 hidden-xs hidden-sm">
             <div class="alt-services-image align-center">
-              <img src="assets/images/promo.png" alt="Feature Image">
+              <img src="assets/images/4532.jpg" alt="Feature Image">
             </div>
           </div>
           <div class="col-sm-6 col-md-3 col-lg-3">
@@ -315,23 +315,7 @@
         </li>
       </ul>
     </section>
-    <section class="module-small bg-dark">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 col-md-8 col-lg-6 col-lg-offset-2">
-            <div class="callout-text font-alt">
-              <h3 class="callout-title">Want to see more works?</h3>
-              <p>We are always open to interesting projects.</p>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-2">
-            <div class="callout-btn-box">
-              <a class="btn btn-w btn-round" href="portfolio_boxed_gutter_col_3.html">Lets view portfolio</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+ 
     <hr class="divider-w">
     <section class="module" id="team">
       <div class="container">
@@ -462,7 +446,7 @@
         </div>
       </div>
     </section>
-    <section class="module bg-dark-60 pt-0 pb-0 parallax-bg testimonial" data-background="assets/images/testimonial_bg.jpg">
+    <section class="module bg-dark-60 pt-0 pb-0 parallax-bg testimonial" data-background="assets/images/web-design.jpg">
       <div class="testimonials-slider pt-140 pb-140">
         <ul class="slides">
           <li>
@@ -550,91 +534,7 @@
         </ul>
       </div>
     </section>
-    <section class="module" id="news">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 col-sm-offset-3">
-            <h2 class="module-title font-alt">Latest blog posts</h2>
-            <div class="module-subtitle">A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy
-              with my whole heart.</div>
-          </div>
-        </div>
-        <div class="row multi-columns-row post-columns">
-          <div class="col-sm-6 col-md-4 col-lg-4">
-            <div class="post mb-20">
-              <div class="post-thumbnail">
-                <a href="#">
-                  <img src="assets/images/post-1.jpg" alt="Blog-post Thumbnail" />
-                </a>
-              </div>
-              <div class="post-header font-alt">
-                <h2 class="post-title">
-                  <a href="#">Our trip to the Alps</a>
-                </h2>
-                <div class="post-meta">By&nbsp;
-                  <a href="#">Mark Stone</a>&nbsp;| 23 November | 3 Comments
-                </div>
-              </div>
-              <div class="post-entry">
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I
-                  enjoy with my whole heart.</p>
-              </div>
-              <div class="post-more">
-                <a class="more-link" href="#">Read more</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4">
-            <div class="post mb-20">
-              <div class="post-thumbnail">
-                <a href="#">
-                  <img src="assets/images/post-2.jpg" alt="Blog-post Thumbnail" />
-                </a>
-              </div>
-              <div class="post-header font-alt">
-                <h2 class="post-title">
-                  <a href="#">Shore after the tide</a>
-                </h2>
-                <div class="post-meta">By&nbsp;
-                  <a href="#">Andy River</a>&nbsp;| 11 November | 4 Comments
-                </div>
-              </div>
-              <div class="post-entry">
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I
-                  enjoy with my whole heart.</p>
-              </div>
-              <div class="post-more">
-                <a class="more-link" href="#">Read more</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 col-lg-4">
-            <div class="post mb-20">
-              <div class="post-thumbnail">
-                <a href="#">
-                  <img src="assets/images/post-3.jpg" alt="Blog-post Thumbnail" />
-                </a>
-              </div>
-              <div class="post-header font-alt">
-                <h2 class="post-title">
-                  <a href="#">We in New Zealand</a>
-                </h2>
-                <div class="post-meta">By&nbsp;
-                  <a href="#">Dylan Woods</a>&nbsp;| 5 November | 15 Comments
-                </div>
-              </div>
-              <div class="post-entry">
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I
-                  enjoy with my whole heart.</p>
-              </div>
-              <div class="post-more">
-                <a class="more-link" href="#">Read more</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    
     <div class="module-small bg-dark">
       <div class="container">
         <div class="row">
