--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#totop">C@NET</a>
+        <a class="navbar-brand" href="#totop">CASAN</a>
       </div>
       <div class="collapse navbar-collapse" id="custom-collapse">
         <ul class="nav navbar-nav navbar-right">
@@ -720,11 +720,11 @@
         <div class="row">
           <div class="col-sm-3">
             <div class="widget">
-              <h5 class="widget-title font-alt">About Titan</h5>
-              <p>The languages only differ in their grammar, their pronunciation and their most common words.</p>
-              <p>Phone: +1 234 567 89 10</p>Fax: +1 234 567 89 10
+              <h5 class="widget-title font-alt">About CASAN</h5>
+              <p>The goal to serve the increasing demand of IT problems. Especially in the financial services and telecommunication sectors of business.</p>
+              <p>Phone: +66 89-4447208</p>
               <p>Email:
-                <a href="#">somecompany@example.com</a>
+                <a href="#">jigkoh3@gmail.com</a>
               </p>
             </div>
           </div>
@@ -813,8 +813,8 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <p class="copyright font-alt">&copy; 2017&nbsp;
-              <a href="index.html">TitaN</a>, All Rights Reserved</p>
+            <p class="copyright font-alt">&copy; 2018&nbsp;
+              <a href="index.html">CASAN</a>, All Rights Reserved</p>
           </div>
           <div class="col-sm-6">
             <div class="footer-social-links">
