--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -214,10 +214,11 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="features-item">
               <div class="features-icon">
-                <span class="icon-genius"></span>
+                <span class="icon-puzzle"></span>
               </div>
-              <h3 class="features-title font-alt">Features &amp; plugins</h3>
-              <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all your visitors.</p>
+              <h3 class="features-title font-alt">Integration</h3>
+              <p>We provide customized solutions to integrate well-known Accounting and CRM solutions with internal systems. The clients enjoys the benefit of using familiar systems (e.g. place orders, track stock, manage client information etc.), augmented by using ‘of-the-shelf’ packages to provide specialized functionality (without having to reinvent the wheel).
+              </p>
             </div>
           </div>
 
@@ -535,23 +536,22 @@
             <div class="post mb-20">
               <div class="post-thumbnail">
                 <a href="#">
-                  <img src="assets/images/post-1.jpg" alt="Blog-post Thumbnail" />
+                  <img src="https://amp.businessinsider.com/images/5a68700200d0ef3d018b4ec7-960-720.jpg" alt="Blog-post Thumbnail" width="800px" height="460px" />
                 </a>
               </div>
               <div class="post-header font-alt">
                 <h2 class="post-title">
-                  <a href="#">Our trip to the Alps</a>
+                  <a href="#">China is Dominating the App Store</a>
                 </h2>
                 <div class="post-meta">By&nbsp;
-                  <a href="#">Mark Stone</a>&nbsp;| 23 November | 3 Comments
+                  <a href="#">James Cook </a>&nbsp;|  Mar. 1, 2018, 11:18 AM
                 </div>
               </div>
               <div class="post-entry">
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I
-                  enjoy with my whole heart.</p>
+                <p>Chinese app developers have seen "remarkable" growth and are dominating Apple's App Store, according to a new analyst note published by Macquarie Research, citing App Annie data.</p>
               </div>
               <div class="post-more">
-                <a class="more-link" href="#">Read more</a>
+                <a class="more-link" href="http://www.businessinsider.com/china-is-dominating-the-app-store-2018-3" target="_blank">Read more</a>
               </div>
             </div>
           </div>
@@ -559,23 +559,24 @@
             <div class="post mb-20">
               <div class="post-thumbnail">
                 <a href="#">
-                  <img src="assets/images/post-2.jpg" alt="Blog-post Thumbnail" />
+                  <img src="https://amp.businessinsider.com/images/5abe3938295fa25a218b456b-640-470.jpg" alt="Blog-post Thumbnail" width="800px" height="460px" />
                 </a>
               </div>
               <div class="post-header font-alt">
                 <h2 class="post-title">
-                  <a href="#">Shore after the tide</a>
+                  <a href="#">Augmented reality apps are seeing fast ...</a>
                 </h2>
                 <div class="post-meta">By&nbsp;
-                  <a href="#">Andy River</a>&nbsp;| 11 November | 4 Comments
+                  <a href="#">Rayna Hollander </a>&nbsp;| Mar. 30, 2018, 10:23 AM
                 </div>
               </div>
               <div class="post-entry">
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I
-                  enjoy with my whole heart.</p>
+                <p>AR apps are seeing fast adoption on iOS, according to new App Store download data from Sensor Tower.
+
+                  Apps that use Apple's ARKit have been installed more than 13 million times</p>
               </div>
               <div class="post-more">
-                <a class="more-link" href="#">Read more</a>
+                <a class="more-link" href="http://www.businessinsider.com/augmented-reality-success-ios-2018-3" target="_blank">Read more</a>
               </div>
             </div>
           </div>
@@ -583,23 +584,22 @@
             <div class="post mb-20">
               <div class="post-thumbnail">
                 <a href="#">
-                  <img src="assets/images/post-3.jpg" alt="Blog-post Thumbnail" />
+                  <img src="https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2018/05/Facebook-Dating-796x417.jpg" alt="Blog-post Thumbnail" width="800px" height="460px" />
                 </a>
               </div>
               <div class="post-header font-alt">
                 <h2 class="post-title">
-                  <a href="#">We in New Zealand</a>
+                  <a href="#">Facebook takes on Tinder with its new dating service</a>
                 </h2>
                 <div class="post-meta">By&nbsp;
-                  <a href="#">Dylan Woods</a>&nbsp;| 5 November | 15 Comments
+                  <a href="#">RACHEL KASER </a>&nbsp;| May. 2, 2018, 09:23 AM
                 </div>
               </div>
               <div class="post-entry">
-                <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I
-                  enjoy with my whole heart.</p>
+                <p>In one of the highlights of today’s F8 conference, Facebook announced it was entering the online dating space with new features. These new features, built into Facebook’s existing app, would use information from your profile to match you with potential paramours based on mutual interests and friends.</p>
               </div>
               <div class="post-more">
-                <a class="more-link" href="#">Read more</a>
+                <a class="more-link" href="https://thenextweb.com/facebook/2018/05/02/facebook-tinder-dating-service/" target="_blank">Read more</a>
               </div>
             </div>
           </div>
