edit phone number

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -164,26 +164,25 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="features-item">
               <div class="features-icon">
-                <span class="icon-bike"></span>
+                <span class="icon-tools-2"></span>
               </div>
-              <h3 class="features-title font-alt">Optimized for speed</h3>
-              <p>We deploy cross-functional teams made up of strategists, designers, and developers to help our clients explore
-                what’s possible with emerging technologies. Our mindset of rapid prototyping combined with user research
-                and ongoing iteration to achieve breakthrough results in short engagements.</p>
+              <h3 class="features-title font-alt">Coding and Development</h3>
+              <p>When it comes time to start writing code, we aim to do the simplest thing possible in the shortest amount of
+                time to deliver the most business value — rather than trying to do everything at once. Engineering is more
+                than just writing code. It’s finding innovatively simple ways to drive value.
+              </p>
             </div>
           </div>
 
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="features-item">
               <div class="features-icon">
-                <span class="icon-tools-2"></span>
+                <span class="icon-bike"></span>
               </div>
-              <h3 class="features-title font-alt">Coding and Development</h3>
-              <p>When it comes time to start writing code, we aim to do the simplest thing possible in the shortest amount of
-                time to deliver the most business value — rather than trying to do everything at once. Engineering is more
-                than just writing code. It’s finding innovatively simple ways to drive value, along with testing for quality
-                at every step of every sprint.
-              </p>
+              <h3 class="features-title font-alt">Optimized for speed</h3>
+              <p>We deploy cross-functional teams made up of strategists, designers, and developers to help our clients explore
+                what’s possible with emerging technologies. Our mindset of rapid prototyping combined with user research
+                and ongoing iteration to achieve breakthrough results in short engagements.</p>
             </div>
           </div>
 
@@ -202,11 +201,10 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="features-item">
               <div class="features-icon">
-                <span class="icon-lifesaver"></span>
+                <span class="icon-puzzle"></span>
               </div>
-              <h3 class="features-title font-alt">Dedicated Support</h3>
-              <p>We pride ourselves in our work, even years after. If any advances should become available we will notify our
-                past clients and try to evolve our products and make them even more efficient.
+              <h3 class="features-title font-alt">Integration</h3>
+              <p>We provide customized solutions to integrate well-known Accounting and CRM solutions with internal systems. The clients enjoys the benefit of using familiar systems (e.g. place orders, track stock, manage client information etc.), augmented by using ‘of-the-shelf’ packages to provide specialized functionality (without having to reinvent the wheel).
               </p>
             </div>
           </div>
@@ -214,10 +212,11 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="features-item">
               <div class="features-icon">
-                <span class="icon-puzzle"></span>
+                <span class="icon-lifesaver"></span>
               </div>
-              <h3 class="features-title font-alt">Integration</h3>
-              <p>We provide customized solutions to integrate well-known Accounting and CRM solutions with internal systems. The clients enjoys the benefit of using familiar systems (e.g. place orders, track stock, manage client information etc.), augmented by using ‘of-the-shelf’ packages to provide specialized functionality (without having to reinvent the wheel).
+              <h3 class="features-title font-alt">Dedicated Support</h3>
+              <p>We pride ourselves in our work, even years after. If any advances should become available we will notify our
+                past clients and try to evolve our products and make them even more efficient.
               </p>
             </div>
           </div>
@@ -894,10 +893,19 @@
 
             <div class="row col1 text-left">
               <div class="col-xs-3">
-                <i class="fa fa-phone"></i>   Phone
+                <i class="fa fa-phone"></i>   Phone (Thai)
               </div>
               <div class="col-xs-9">
-                (+66)89-4447208
+                +6689-444-7208 Jigkoh
+              </div>
+            </div>
+
+            <div class="row col1 text-left">
+              <div class="col-xs-3">
+                <i class="fa fa-phone"></i>   Phone (Eng)
+              </div>
+              <div class="col-xs-9">
+                +6691-010-7055 Jesse
               </div>
             </div>
 
@@ -938,7 +946,8 @@
               <h5 class="widget-title font-alt">About CASAN</h5>
               <p>The goal to serve the increasing demand of IT problems. Especially in the financial services and telecommunication
                 sectors of business.</p>
-              <p>Phone: +66 89-4447208</p>
+              <p>Phone (Thai): +66 89-444-7208 Jigkoh</p>
+              <p>Phone (Eng):  +66 91-010-7055 Jesse</p>
               <p>Email:
                 <a href="#">jigkoh3@gmail.com</a>
               </p>
